--- a/app/src/main/res/layout/activity_otp.xml
+++ b/app/src/main/res/layout/activity_otp.xml
@@ -7,6 +7,31 @@
     android:layout_height="match_parent"
     tools:context="USER.otp">
 
+
+    <TextView
+        android:id="@+id/name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="80dp"
+        android:text="Max Coder"
+        android:textColor="#000"
+        android:textSize="34sp"
+        android:textStyle="bold"
+        app:fontFamily="@font/poppins_medium" />
+
+    <TextView
+        android:id="@+id/sub_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/name"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="10dp"
+        android:text="Sign in to Continue"
+        android:textColor="#969eab"
+        android:textSize="24sp"
+        app:fontFamily="@font/alegreya_sans" />
+
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/box1"
         android:layout_width="match_parent"
@@ -15,7 +40,14 @@
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:layout_marginTop="268dp"/>
+        android:layout_marginTop="268dp">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="#252734"
+            android:hint="Enter Name" />
+    </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/box2"
@@ -27,7 +59,13 @@
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_below="@id/box1"
         android:layout_marginTop="10dp"
-        />
+        >
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Enter Email id" />
+    </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/box3"
@@ -67,5 +105,7 @@
             android:textColor="#fff"
             android:textSize="20sp"
             android:text="Continue" /></androidx.cardview.widget.CardView>
+
+
 
 </RelativeLayout>
