--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -5,5 +5,6 @@
         <item>@font/atomic_age</item>
         <item>@font/cedarville_cursive</item>
         <item>@font/chango</item>
+        <item>@font/italiana</item>
     </array>
 </resources>
