--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -9,6 +9,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@drawable/gradient1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -32,6 +33,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginTop="145dp"
+            android:background="@color/teal_700"
             android:text="Pick Country" />
 
         <TextView
@@ -49,50 +51,56 @@
             android:id="@+id/pickState"
             android:layout_width="140dp"
             android:layout_height="wrap_content"
-            android:text="Pick State"
+            android:layout_marginStart="20dp"
             android:layout_marginTop="200dp"
-            android:layout_marginStart="20dp"/>
+            android:background="@color/teal_700"
+            android:text="Pick State" />
 
 
         <TextView
             android:id="@+id/state_name"
-            android:layout_width="151dp"
-            android:layout_height="wrap_content"
+            android:layout_width="186dp"
+            android:layout_height="41dp"
             android:layout_marginStart="180dp"
             android:layout_marginTop="210dp"
+            android:background="@drawable/round"
             android:text="State"
             android:textAlignment="center"
+            android:textColor="#120F0F"
             android:textSize="20dp" />
 
         <Button
             android:id="@+id/pick_city"
             android:layout_width="140dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="260dp"
             android:layout_marginStart="20dp"
-            android:text="Pick City"
-            />
+            android:layout_marginTop="260dp"
+            android:background="@color/teal_700"
+            android:text="Pick City" />
 
         <TextView
             android:id="@+id/city_name"
-            android:layout_width="163dp"
-            android:layout_height="wrap_content"
+            android:layout_width="190dp"
+            android:layout_height="43dp"
             android:layout_marginStart="180dp"
             android:layout_marginTop="270dp"
+            android:background="@drawable/round"
+            android:gravity="center"
             android:text="City"
-            android:textSize="20dp"
-            android:gravity="center"/>
+            android:textColor="#020101"
+            android:textSize="20dp" />
 
         <Spinner
             android:id="@+id/spinner"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="401dp"
+            android:layout_height="74dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:layout_alignParentBottom="true"
-            android:layout_marginStart="0dp"
-            android:layout_marginTop="411dp"
-            android:layout_marginBottom="296dp" />
+            android:layout_marginStart="3dp"
+            android:layout_marginTop="407dp"
+            android:layout_marginBottom="250dp"
+            android:background="@drawable/square" />
 
     </RelativeLayout>
 
