--- a/app/src/main/res/layout/activity_h_o_s_p_i_t_a_l_d_e_t_a_i_l_s.xml
+++ b/app/src/main/res/layout/activity_h_o_s_p_i_t_a_l_d_e_t_a_i_l_s.xml
@@ -5,9 +5,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="HOSPITAL.HOSPITALDETAILS">
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@drawable/gradient1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -31,6 +33,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginTop="145dp"
+            android:background="@color/teal_700"
             android:text="Pick Country" />
 
         <TextView
@@ -48,63 +51,74 @@
             android:id="@+id/pickState"
             android:layout_width="140dp"
             android:layout_height="wrap_content"
-            android:text="Pick State"
+            android:layout_marginStart="20dp"
             android:layout_marginTop="200dp"
-            android:layout_marginStart="20dp"/>
+            android:background="@color/teal_700"
+            android:text="Pick State" />
 
 
         <TextView
             android:id="@+id/state_name"
-            android:layout_width="151dp"
-            android:layout_height="wrap_content"
+            android:layout_width="184dp"
+            android:layout_height="41dp"
             android:layout_marginStart="180dp"
             android:layout_marginTop="210dp"
+            android:background="@drawable/round"
             android:text="State"
             android:textAlignment="center"
+            android:textColor="#000000"
             android:textSize="20dp" />
 
         <Button
             android:id="@+id/pick_city"
             android:layout_width="140dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="260dp"
             android:layout_marginStart="20dp"
-            android:text="Pick City"
-            />
+            android:layout_marginTop="260dp"
+            android:background="@color/teal_700"
+            android:text="Pick City" />
 
         <TextView
             android:id="@+id/city_name"
-            android:layout_width="163dp"
-            android:layout_height="wrap_content"
+            android:layout_width="188dp"
+            android:layout_height="42dp"
             android:layout_marginStart="180dp"
             android:layout_marginTop="270dp"
+            android:background="@drawable/round"
+            android:gravity="center"
             android:text="City"
-            android:textSize="20dp"
-            android:gravity="center"/>
+            android:textColor="#000000"
+            android:textSize="20dp" />
 
         <EditText
             android:id="@+id/addOFhosp"
-            android:layout_width="342dp"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
-            android:layout_marginEnd="38dp"
-            android:layout_marginBottom="238dp"
+            android:layout_marginEnd="0dp"
+            android:layout_marginBottom="184dp"
+            android:background="@drawable/square"
             android:ems="10"
-            android:hint="ENTER YOUR FULL ADDRESS OF YOUR HOSPITAL"
-            android:inputType="textPostalAddress" />
+            android:hint="ENTER  FULL ADDRESS OF HOSPITAL"
+            android:inputType="textPostalAddress"
+            android:padding="10dp"
+            android:textColorHint="#8F0C0B0B" />
 
         <EditText
             android:id="@+id/hospname"
-            android:layout_width="265dp"
-            android:layout_height="57dp"
+            android:layout_width="match_parent"
+            android:layout_height="53dp"
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
-            android:layout_marginEnd="79dp"
-            android:layout_marginBottom="308dp"
+            android:layout_marginEnd="0dp"
+            android:layout_marginBottom="312dp"
+            android:background="@drawable/square"
             android:ems="10"
             android:hint="ENTER YOUR HOSPITAL NAME FULLY"
-            android:inputType="textPersonName" />
+            android:inputType="textPersonName"
+            android:paddingStart="10dp"
+            android:textColorHint="#8A000000" />
 
         <Button
             android:id="@+id/addata"
@@ -112,8 +126,9 @@
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
-            android:layout_marginEnd="142dp"
-            android:layout_marginBottom="139dp"
+            android:layout_marginEnd="124dp"
+            android:layout_marginBottom="73dp"
+            android:background="@color/teal_700"
             android:text="ADD DATA" />
 
     </RelativeLayout>
