thendral agum thendral agum

--- a/app/src/main/res/layout/activity_r_e_g.xml
+++ b/app/src/main/res/layout/activity_r_e_g.xml
@@ -4,9 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFFFFF"
-    tools:context="Hospital.Register">
-
+    tools:context="HOSPITAL.REG">
     <Button
         android:id="@+id/gsignin"
         android:layout_width="wrap_content"
@@ -17,5 +15,5 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-</androidx.constraintlayout.widget.ConstraintLayout>
 
+</androidx.constraintlayout.widget.ConstraintLayout>
