--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -15,7 +15,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0">
+        app:layout_constraintVertical_bias="0.0">
 
 
         <ImageView
@@ -90,17 +90,26 @@
             android:textColor="#020101"
             android:textSize="20dp" />
 
-        <Spinner
-            android:id="@+id/spinner"
-            android:layout_width="401dp"
-            android:layout_height="74dp"
+        <ListView
+            android:id="@+id/listview"
+            android:layout_width="match_parent"
+            android:layout_height="316dp"
+            android:layout_below="@+id/city_name"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="2dp"
+            android:layout_marginTop="97dp"
+            android:layout_marginBottom="5dp" />
+
+        <Button
+            android:id="@+id/check"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginStart="3dp"
-            android:layout_marginTop="407dp"
-            android:layout_marginBottom="250dp"
-            android:background="@drawable/square" />
+            android:layout_marginStart="149dp"
+            android:layout_marginTop="332dp"
+            android:text="check" />
 
     </RelativeLayout>
 
