--- a/app/src/main/res/layout/activity_final_view.xml
+++ b/app/src/main/res/layout/activity_final_view.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="HOSPITAL.Finaldata">
+    tools:context="HOSPITAL.FinalView">
+
     <TextView
         android:id="@+id/textView11"
         android:layout_width="239dp"
