--- a/app/src/main/res/layout/activity_modify.xml
+++ b/app/src/main/res/layout/activity_modify.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="HOSPITAL.DATABEDS">
+    tools:context="HOSPITAL.Modify">
 
     <EditText
         android:id="@+id/dress1"
