--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -1,18 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     style="@style/ThemeOverlay.AppCompat.Dark"
     android:layout_width="match_parent"
     android:layout_height="172dp"
-    android:background="#0E0E0E"
+    android:background="@color/teal_700"
     android:padding="25dp">
 
     <TextView
         style="@style/TextAppearance.AppCompat.Body1"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="68dp"
         android:layout_marginTop="78dp"
         android:text="CovidCare+"
         android:textColor="#FFFFFF"
-        android:textSize="40sp" />
+        android:textSize="24sp" />
+
+    <com.airbnb.lottie.LottieAnimationView
+        android:layout_width="167dp"
+        android:layout_height="137dp"
+        app:lottie_autoPlay="true"
+        app:lottie_fileName="navigation.json"
+        app:lottie_loop="true">
+
+
+    </com.airbnb.lottie.LottieAnimationView>
+
 
 </LinearLayout>
