--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -35,7 +35,7 @@
             android:layout_width="100dp"
             android:layout_height="75dp"
             android:layout_marginStart="150dp"
-            android:background="@drawable/win" />
+            android:background="@mipmap/ic_launcher" />
 
 
 
@@ -53,7 +53,7 @@
             android:layout_width="180dp"
             android:layout_height="65dp"
             android:layout_marginStart="10dp"
-            android:background="@color/teal_700"
+            android:background="@drawable/buttonsquare"
             android:drawableEnd="@drawable/ic_baseline_arrow_drop_down_24"
             android:drawablePadding="10dp"
             android:text="Select Country" />
@@ -84,7 +84,7 @@
             android:layout_height="65dp"
             android:layout_marginStart="10dp"
             android:layout_marginTop="5dp"
-            android:background="@color/teal_700"
+            android:background="@drawable/buttonsquare"
             android:drawableEnd="@drawable/ic_baseline_arrow_drop_down_24"
             android:drawablePadding="10dp"
             android:text="Select State" />
@@ -118,7 +118,7 @@
             android:layout_height="65dp"
             android:layout_marginStart="10dp"
             android:layout_marginTop="5dp"
-            android:background="@color/teal_700"
+            android:background="@drawable/buttonsquare"
             android:drawableEnd="@drawable/ic_baseline_arrow_drop_down_24"
             android:drawablePadding="10dp"
             android:text="Select City" />
