--- a/app/src/main/res/layout/activity_navigation.xml
+++ b/app/src/main/res/layout/activity_navigation.xml
@@ -39,6 +39,14 @@
 
         </androidx.appcompat.widget.Toolbar>
 
+
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Sample"
+            android:textColor="#000000" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -172,12 +180,13 @@
             android:layout_height="wrap_content">
 
             <ImageView
+                android:id="@+id/im1"
                 android:layout_width="380dp"
                 android:layout_height="80dp"
-                android:background="@drawable/cv1"
-                android:layout_marginRight="20dp"
                 android:layout_marginLeft="18dp"
-                android:layout_marginTop="10dp"/>
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="20dp"
+                android:background="@drawable/cv1" />
 
             <com.airbnb.lottie.LottieAnimationView
                 android:layout_width="67dp"
@@ -214,12 +223,13 @@
             android:layout_height="wrap_content">
 
             <ImageView
+                android:id="@+id/im2"
                 android:layout_width="380dp"
                 android:layout_height="80dp"
-                android:background="@drawable/cv5"
-                android:layout_marginRight="20dp"
                 android:layout_marginLeft="18dp"
-                android:layout_marginTop="10dp"/>
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="20dp"
+                android:background="@drawable/cv5" />
 
             <com.airbnb.lottie.LottieAnimationView
                 android:layout_width="67dp"
@@ -257,12 +267,13 @@
             android:layout_height="wrap_content">
 
             <ImageView
+                android:id="@+id/im3"
                 android:layout_width="380dp"
                 android:layout_height="80dp"
-                android:background="@drawable/cv2"
-                android:layout_marginRight="20dp"
                 android:layout_marginLeft="18dp"
-                android:layout_marginTop="10dp"/>
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="20dp"
+                android:background="@drawable/cv2" />
 
             <com.airbnb.lottie.LottieAnimationView
                 android:layout_width="67dp"
@@ -299,12 +310,13 @@
             android:layout_height="wrap_content">
 
             <ImageView
+                android:id="@+id/im4"
                 android:layout_width="380dp"
                 android:layout_height="80dp"
-                android:background="@drawable/cv4"
-                android:layout_marginRight="20dp"
                 android:layout_marginLeft="18dp"
-                android:layout_marginTop="10dp"/>
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="20dp"
+                android:background="@drawable/cv4" />
 
             <com.airbnb.lottie.LottieAnimationView
                 android:layout_width="67dp"
