--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -1,73 +1,153 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/E-mailid"
     android:layout_width="match_parent"
+    android:orientation="vertical"
     android:layout_height="match_parent"
     android:background="@color/white"
     tools:context="USER.Registration">
 
-    <EditText
-        android:id="@+id/pass"
-        android:layout_width="282dp"
-        android:layout_height="55dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginEnd="71dp"
-        android:ems="10"
-        android:hint="Password"
-        android:inputType="textPassword"
-        android:textColor="#000000"
-        android:textColorHint="#4E4E4E"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/googlemail" />
-
-    <EditText
-        android:id="@+id/confpass"
-        android:layout_width="286dp"
-        android:layout_height="53dp"
-        android:layout_marginTop="46dp"
-        android:layout_marginEnd="74dp"
-        android:ems="10"
-        android:hint="Confirm Password"
-        android:inputType="textPassword"
-        android:textColor="#000000"
-        android:textColorHint="#474141"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/pass" />
-
-    <Button
-        android:id="@+id/regi"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="86dp"
-        android:layout_marginEnd="181dp"
-        android:text="reg"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/confpass" />
+        android:orientation="horizontal">
+
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="40dp"
+            android:layout_marginTop="50dp"
+            android:letterSpacing="0.03"
+            android:text="REGISTER"
+            android:textColor="#0d6e6a"
+            android:textSize="30sp"
+            android:textStyle="bold" />
+
+    </LinearLayout>
+    <com.airbnb.lottie.LottieAnimationView
+        android:layout_width="315dp"
+        android:layout_height="257dp"
+        android:layout_gravity="center"
+        app:lottie_autoPlay="true"
+        app:lottie_fileName="register.json"
+        app:lottie_loop="true" />
+
 
     <EditText
         android:id="@+id/googlemail"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="131dp"
-        android:layout_marginEnd="156dp"
-        android:ems="10"
-        android:hint="E-Mail"
+        android:layout_width="336dp"
+        android:layout_height="43dp"
+        android:layout_gravity="center"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="25dp"
+        android:background="@drawable/round_border"
+        android:hint="E-Mail ID"
         android:inputType="textEmailAddress"
-        android:textColor="#000000"
-        android:textColorHint="#656565"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:drawableStart="@drawable/ic_baseline_email_24"
+        android:drawablePadding="15dp"
+        android:paddingStart="15dp"
+        android:textColor="@color/black"
+        android:textColorHint="#8F000000" />
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:layout_width="336dp"
+        android:layout_height="55dp"
+        android:layout_gravity="center"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="25dp"
+        android:background="@drawable/round_border"
+        android:hint="Password"
+        android:textColorHint="#6A6A6A"
+        app:hintTextColor="#A14C4A4A"
+        app:passwordToggleEnabled="true"
+        app:passwordToggleTint="@color/teal_700">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/pass"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:drawableStart="@drawable/ic_baseline_lock_24"
+            android:drawablePadding="15dp"
+            android:inputType="textPassword"
+            android:paddingStart="15dp"
+            android:textColor="@color/black"
+            android:background="@null"
+            android:textColorHint="#77A5A5A5" />
+
+    </com.google.android.material.textfield.TextInputLayout>
+    <com.google.android.material.textfield.TextInputLayout
+        android:layout_width="336dp"
+        android:layout_height="55dp"
+        android:layout_gravity="center"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="25dp"
+        android:background="@drawable/round_border"
+        android:hint="Confirm Password"
+        android:textColorHint="#6A6A6A"
+        app:hintTextColor="#A14C4A4A"
+        app:passwordToggleEnabled="true"
+        app:passwordToggleTint="@color/teal_700">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/confpass"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:drawableStart="@drawable/ic_baseline_lock_24"
+            android:drawablePadding="15dp"
+            android:background="@null"
+            android:inputType="textPassword"
+            android:paddingStart="15dp"
+            android:textColor="@color/black"
+            android:textColorHint="#77A5A5A5" />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+
+
+
 
     <Button
-        android:id="@+id/logi"
+        android:id="@+id/regi"
+        android:layout_width="336dp"
+        android:layout_height="43dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/buttonbackground"
+        android:text="REGISTER"
+        android:textColor="#fff" />
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="21dp"
-        android:layout_marginEnd="179dp"
-        android:text="Login"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/regi" />
+        android:text="Existing User?LOGIN"
+        android:textColor="@color/black"
+        android:layout_marginTop="10dp"
+        android:textSize="16dp"
+        android:layout_marginStart="130dp"
+        android:layout_marginEnd="80dp"/>
+    <Button
+        android:id="@+id/logi"
+        android:layout_width="336dp"
+        android:layout_height="43dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="10dp"
+        android:background="@drawable/buttonbackground"
+        android:text="LOGIN"
+        android:textColor="#fff" />
+    <com.airbnb.lottie.LottieAnimationView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:lottie_fileName="write.json"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+
+
+</LinearLayout>
