--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,8 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="blue">#89cff0</color>
+    <color name="StatePressed">#009688</color>
+    <color name="StateEnabled">#0d6e6a</color>
+    <color name="cardBackground">#FE1D1D2F</color>
+    <color name="disabled">#536872</color>
 </resources>
